--- a/src/app.css
+++ b/src/app.css
@@ -59,3 +59,865 @@ input:checked + .slider:before {
 .slider.round:before {
   border-radius: 50%;
 }
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Roboto", sans-serif;
+}
+html,
+body {
+  width: 100%;
+  height: 100%;
+}
+.osr {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: 0;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  white-space: nowrap;
+  border-width: 0;
+}
+h1 {
+  font-weight: bold;
+}
+h2 {
+  font-size: 1.35rem;
+  font-weight: 500;
+}
+h3 {
+  font-weight: 500;
+}
+label {
+  text-align: start;
+  color: black;
+}
+a {
+  color: #0080ff;
+}
+p.indent {
+  overflow-wrap: break-word;
+  line-height: 0.75cm;
+  text-indent: 1.25cm;
+}
+.quote-reference {
+  font-size: smaller;
+}
+.quote-reference::before {
+  content: "~ ";
+}
+.title {
+  margin-bottom: 16px;
+  text-align: start !important;
+}
+.sub-title {
+  margin: 8px 0;
+  align-items: start !important;
+}
+.container {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  justify-content: center;
+  text-align: start;
+  gap: 8px;
+}
+.container.center {
+  align-items: center !important;
+  justify-content: center !important;
+}
+.container.start {
+  align-items: start !important;
+  justify-content: start !important;
+}
+.container.end {
+  align-items: end !important;
+  justify-content: end !important;
+}
+.container.row {
+  flex-direction: row !important;
+}
+.container.row.v-start {
+  align-items: start !important;
+}
+.container.row.v-end {
+  align-items: end !important;
+}
+.container.row.v-center {
+  align-items: center !important;
+}
+.container.row.h-start {
+  justify-content: start !important;
+}
+.container.row.h-end {
+  justify-content: end !important;
+}
+.container.row.h-center {
+  justify-content: center !important;
+}
+.container.distance {
+  padding: 16px;
+}
+.container.h-start {
+  align-items: start !important;
+}
+.container.h-end {
+  align-items: end !important;
+}
+.container.h-center {
+  align-items: center !important;
+}
+.container.v-start {
+  justify-content: start !important;
+}
+.container.v-end {
+  justify-content: end !important;
+}
+.container.v-center {
+  justify-content: center !important;
+}
+textarea {
+  min-height: 120px;
+  width: 100%;
+  padding: 14px 16px;
+  border: 0;
+  background: #ededed;
+  color: #000;
+  border-radius: 4px;
+  resize: vertical;
+}
+textarea.outlined {
+  background: transparent;
+  border: 1px solid #333;
+}
+textarea.rounded {
+  border-radius: 16px;
+}
+.progress {
+  width: 100%;
+  height: 24px;
+  display: flex;
+  align-items: center;
+  justify-content: start;
+  background: #ededed;
+  border-radius: 1000px;
+  transition: all 300ms;
+}
+.progress .indicator {
+  display: grid;
+  place-items: center;
+  height: 100%;
+  background: #0080ff;
+  border-radius: 1000px;
+  font-weight: 500;
+  color: #fff;
+  transition: all 300ms;
+}
+.loading {
+  display: inline-block;
+  width: 61px;
+  height: 61px;
+}
+.loading::after {
+  content: " ";
+  display: block;
+  width: 45px;
+  height: 45px;
+  margin: 8px;
+  border-radius: 50%;
+  border: 6px solid #0080ff;
+  border-color: #0080ff transparent #0080ff transparent;
+  animation: lds-dual-ring 700ms linear infinite;
+}
+@keyframes lds-dual-ring {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+.c-white {
+  color: #fff !important;
+}
+.bg-white {
+  background: #fff !important;
+}
+.border-white {
+  border-color: #fff !important;
+}
+button.outlined.border-white {
+  color: #fff !important;
+}
+button.outlined.border-white:hover {
+  background: #fff !important;
+  color: #fff !important;
+  filter: none;
+}
+.switch input:checked + .slider.c-white {
+  background: #fff !important;
+}
+.switch input:checked + .slider.white {
+  box-shadow: 0 0 1px #fff !important;
+}
+.c-black {
+  color: #000 !important;
+}
+.bg-black {
+  background: #000 !important;
+}
+.border-black {
+  border-color: #000 !important;
+}
+button.outlined.border-black {
+  color: #000 !important;
+}
+button.outlined.border-black:hover {
+  background: #000 !important;
+  color: #fff !important;
+  filter: none;
+}
+.switch input:checked + .slider.c-black {
+  background: #000 !important;
+}
+.switch input:checked + .slider.black {
+  box-shadow: 0 0 1px #000 !important;
+}
+.c-blue {
+  color: #0080ff !important;
+}
+.bg-blue {
+  background: #0080ff !important;
+}
+.border-blue {
+  border-color: #0080ff !important;
+}
+button.outlined.border-blue {
+  color: #0080ff !important;
+}
+button.outlined.border-blue:hover {
+  background: #0080ff !important;
+  color: #fff !important;
+  filter: none;
+}
+.switch input:checked + .slider.c-blue {
+  background: #0080ff !important;
+}
+.switch input:checked + .slider.blue {
+  box-shadow: 0 0 1px #0080ff !important;
+}
+.c-deep-blue {
+  color: #2962ff !important;
+}
+.bg-deep-blue {
+  background: #2962ff !important;
+}
+.border-deep-blue {
+  border-color: #2962ff !important;
+}
+button.outlined.border-deep-blue {
+  color: #2962ff !important;
+}
+button.outlined.border-deep-blue:hover {
+  background: #2962ff !important;
+  color: #fff !important;
+  filter: none;
+}
+.switch input:checked + .slider.c-deep-blue {
+  background: #2962ff !important;
+}
+.switch input:checked + .slider.deep-blue {
+  box-shadow: 0 0 1px #2962ff !important;
+}
+.c-green {
+  color: #00d676 !important;
+}
+.bg-green {
+  background: #00d676 !important;
+}
+.border-green {
+  border-color: #00d676 !important;
+}
+button.outlined.border-green {
+  color: #00d676 !important;
+}
+button.outlined.border-green:hover {
+  background: #00d676 !important;
+  color: #fff !important;
+  filter: none;
+}
+.switch input:checked + .slider.c-green {
+  background: #00d676 !important;
+}
+.switch input:checked + .slider.green {
+  box-shadow: 0 0 1px #00d676 !important;
+}
+.c-deep-green {
+  color: #00c853 !important;
+}
+.bg-deep-green {
+  background: #00c853 !important;
+}
+.border-deep-green {
+  border-color: #00c853 !important;
+}
+button.outlined.border-deep-green {
+  color: #00c853 !important;
+}
+button.outlined.border-deep-green:hover {
+  background: #00c853 !important;
+  color: #fff !important;
+  filter: none;
+}
+.switch input:checked + .slider.c-deep-green {
+  background: #00c853 !important;
+}
+.switch input:checked + .slider.deep-green {
+  box-shadow: 0 0 1px #00c853 !important;
+}
+.c-red {
+  color: #f44336 !important;
+}
+.bg-red {
+  background: #f44336 !important;
+}
+.border-red {
+  border-color: #f44336 !important;
+}
+button.outlined.border-red {
+  color: #f44336 !important;
+}
+button.outlined.border-red:hover {
+  background: #f44336 !important;
+  color: #fff !important;
+  filter: none;
+}
+.switch input:checked + .slider.c-red {
+  background: #f44336 !important;
+}
+.switch input:checked + .slider.red {
+  box-shadow: 0 0 1px #f44336 !important;
+}
+.c-deep-red {
+  color: #c62828 !important;
+}
+.bg-deep-red {
+  background: #c62828 !important;
+}
+.border-deep-red {
+  border-color: #c62828 !important;
+}
+button.outlined.border-deep-red {
+  color: #c62828 !important;
+}
+button.outlined.border-deep-red:hover {
+  background: #c62828 !important;
+  color: #fff !important;
+  filter: none;
+}
+.switch input:checked + .slider.c-deep-red {
+  background: #c62828 !important;
+}
+.switch input:checked + .slider.deep-red {
+  box-shadow: 0 0 1px #c62828 !important;
+}
+.c-orange {
+  color: #ff8800 !important;
+}
+.bg-orange {
+  background: #ff8800 !important;
+}
+.border-orange {
+  border-color: #ff8800 !important;
+}
+button.outlined.border-orange {
+  color: #ff8800 !important;
+}
+button.outlined.border-orange:hover {
+  background: #ff8800 !important;
+  color: #fff !important;
+  filter: none;
+}
+.switch input:checked + .slider.c-orange {
+  background: #ff8800 !important;
+}
+.switch input:checked + .slider.orange {
+  box-shadow: 0 0 1px #ff8800 !important;
+}
+.c-deep-orange {
+  color: #f57c00 !important;
+}
+.bg-deep-orange {
+  background: #f57c00 !important;
+}
+.border-deep-orange {
+  border-color: #f57c00 !important;
+}
+button.outlined.border-deep-orange {
+  color: #f57c00 !important;
+}
+button.outlined.border-deep-orange:hover {
+  background: #f57c00 !important;
+  color: #fff !important;
+  filter: none;
+}
+.switch input:checked + .slider.c-deep-orange {
+  background: #f57c00 !important;
+}
+.switch input:checked + .slider.deep-orange {
+  box-shadow: 0 0 1px #f57c00 !important;
+}
+.c-pink {
+  color: #ec407a !important;
+}
+.bg-pink {
+  background: #ec407a !important;
+}
+.border-pink {
+  border-color: #ec407a !important;
+}
+button.outlined.border-pink {
+  color: #ec407a !important;
+}
+button.outlined.border-pink:hover {
+  background: #ec407a !important;
+  color: #fff !important;
+  filter: none;
+}
+.switch input:checked + .slider.c-pink {
+  background: #ec407a !important;
+}
+.switch input:checked + .slider.pink {
+  box-shadow: 0 0 1px #ec407a !important;
+}
+.c-deep-pink {
+  color: #e91e63 !important;
+}
+.bg-deep-pink {
+  background: #e91e63 !important;
+}
+.border-deep-pink {
+  border-color: #e91e63 !important;
+}
+button.outlined.border-deep-pink {
+  color: #e91e63 !important;
+}
+button.outlined.border-deep-pink:hover {
+  background: #e91e63 !important;
+  color: #fff !important;
+  filter: none;
+}
+.switch input:checked + .slider.c-deep-pink {
+  background: #e91e63 !important;
+}
+.switch input:checked + .slider.deep-pink {
+  box-shadow: 0 0 1px #e91e63 !important;
+}
+.c-purple {
+  color: #7c4dff !important;
+}
+.bg-purple {
+  background: #7c4dff !important;
+}
+.border-purple {
+  border-color: #7c4dff !important;
+}
+button.outlined.border-purple {
+  color: #7c4dff !important;
+}
+button.outlined.border-purple:hover {
+  background: #7c4dff !important;
+  color: #fff !important;
+  filter: none;
+}
+.switch input:checked + .slider.c-purple {
+  background: #7c4dff !important;
+}
+.switch input:checked + .slider.purple {
+  box-shadow: 0 0 1px #7c4dff !important;
+}
+.c-deep-purple {
+  color: #651fff !important;
+}
+.bg-deep-purple {
+  background: #651fff !important;
+}
+.border-deep-purple {
+  border-color: #651fff !important;
+}
+button.outlined.border-deep-purple {
+  color: #651fff !important;
+}
+button.outlined.border-deep-purple:hover {
+  background: #651fff !important;
+  color: #fff !important;
+  filter: none;
+}
+.switch input:checked + .slider.c-deep-purple {
+  background: #651fff !important;
+}
+.switch input:checked + .slider.deep-purple {
+  box-shadow: 0 0 1px #651fff !important;
+}
+button {
+  width: min(510px, 100%);
+  border: 0;
+  padding: 12px 16px;
+  border-radius: 4px;
+  background: #dedede;
+  color: #222;
+  font-weight: 500;
+  font-size: 14px;
+  text-align: center;
+  text-decoration: none;
+  transition: all 300ms;
+}
+button:hover {
+  filter: brightness(0.8);
+}
+button.outlined {
+  border: 1px solid #333;
+  background: transparent;
+}
+button.outlined:hover {
+  background: rgba(0, 0, 0, 0.12);
+}
+button.half {
+  width: 50%;
+}
+button.rounded {
+  border-radius: 1000px;
+}
+input:not([type="checkbox"]):not([type="radio"]):not([type="range"]),
+select {
+  width: 100%;
+  padding: 14px 16px;
+  border: 0;
+  background: #ededed;
+  color: #000;
+  border-radius: 4px;
+}
+input:not([type="checkbox"]):not([type="radio"]):not([type="range"]).outlined,
+select.outlined {
+  background: transparent;
+  border: 1px solid #333;
+}
+input:not([type="checkbox"]):not([type="radio"]):not([type="range"]).rounded,
+select.rounded {
+  border-radius: 1000px;
+}
+input[type="range"] {
+  width: 100%;
+}
+.navbar {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+  max-height: 60px;
+  background: #0080ff;
+  box-shadow: 0 3px 6px 0 rgba(0, 0, 0, 0.4);
+  margin-bottom: 16px;
+  padding: 16px;
+}
+.navbar h1 {
+  text-align: center;
+  color: #fff;
+  cursor: pointer;
+  margin: 0;
+  padding: 0;
+  display: grid;
+  place-items: center;
+}
+.navbar .toggler {
+  width: 24px;
+  height: 24px;
+  color: #fff;
+  cursor: pointer;
+  display: none;
+}
+.navbar ul.content {
+  list-style: none;
+  gap: 8px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  margin-left: 0 !important;
+}
+.navbar ul.content li a {
+  color: #fff;
+  text-decoration: none;
+}
+.navbar.responsive {
+  justify-content: space-between;
+}
+@media (max-width: 420px) {
+  .navbar.responsive .toggler {
+    display: block;
+  }
+  .navbar.responsive ul.content {
+    display: none;
+  }
+}
+.navbar.centered {
+  justify-content: center !important;
+}
+.mobile-content {
+  margin-left: 0 !important;
+}
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 60px;
+  height: 34px;
+}
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+.switch input:checked + .slider {
+  background: #0080ff;
+}
+.switch input:focus + .slider {
+  box-shadow: 0 0 1px #0080ff;
+}
+.switch input:checked + .slider:before {
+  -webkit-transform: translateX(26px);
+  -ms-transform: translateX(26px);
+  transform: translateX(26px);
+}
+.switch .slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: #ededed;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+  border-radius: 4px;
+}
+.switch .slider.rounded {
+  border-radius: 1000px;
+}
+.switch .slider.rounded:before {
+  border-radius: 1000px;
+}
+.switch .slider:before {
+  border-radius: 4px;
+  position: absolute;
+  content: "";
+  height: 26px;
+  width: 26px;
+  left: 4px;
+  bottom: 4px;
+  background: white;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+}
+ul,
+ol {
+  margin-left: 16px;
+}
+dd {
+  margin-left: 16px;
+}
+html.theme-change {
+  transition: all 0.15s;
+}
+html.theme-change * {
+  transition: all 0.15s;
+}
+html.dark body {
+  background: #24242d;
+  color: #fff;
+}
+html.dark h1 {
+  color: #fff;
+}
+html.dark h2 {
+  color: #eeeeee;
+}
+html.dark h3 {
+  color: #dfdfdf;
+}
+html.dark p,
+html.dark span,
+html.dark q,
+html.dark li,
+html.dark dd,
+html.dark dt,
+html.dark label {
+  color: #dfdfdf;
+}
+html.dark .card header h3 {
+  color: #fff;
+}
+html.dark .card header,
+html.dark .card main,
+html.dark .card footer {
+  background: #42445a;
+}
+html.dark .progress {
+  background: #42445a !important;
+}
+html.dark .switch input:checked + .slider {
+  background: #0080ff;
+}
+html.dark .switch input:checked + .slider:before {
+  background: white;
+}
+html.dark .switch .slider {
+  background: #2f2f3b;
+}
+html.dark .switch .slider:before {
+  background: #464658;
+}
+html.dark input,
+html.dark select,
+html.dark textarea {
+  background: #42445a !important;
+  color: #fff !important;
+}
+html.dark input::placeholder,
+html.dark select::placeholder,
+html.dark textarea::placeholder {
+  color: #dedede !important;
+}
+html.dark input.outlined,
+html.dark select.outlined,
+html.dark textarea.outlined {
+  background: transparent !important;
+  border: 1px solid #878787;
+}
+html.dark button {
+  background: #42445a;
+  color: #dfdfdf;
+}
+html.dark button.outlined {
+  border: 1px solid #878787;
+  background: transparent;
+}
+html.dark button.outlined:hover {
+  background: rgba(255, 255, 255, 0.12);
+}
+html.dark.dark-navbar .navbar {
+  background: #272836 !important;
+  color: #fff;
+  box-shadow: 0 3px 6px 0 rgba(255, 255, 255, 0.045);
+}
+html.dark.dark-navbar .navbar.content {
+  background: transparent !important;
+  color: #fff !important;
+}
+html.dark.dark-navbar .mobile-content {
+  background: #272832 !important;
+  color: #fff !important;
+}
+.card {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  justify-content: center;
+  text-align: start;
+  gap: 8px;
+  gap: 0;
+}
+.card.center {
+  align-items: center !important;
+  justify-content: center !important;
+}
+.card.start {
+  align-items: start !important;
+  justify-content: start !important;
+}
+.card.end {
+  align-items: end !important;
+  justify-content: end !important;
+}
+.card.row {
+  flex-direction: row !important;
+}
+.card.row.v-start {
+  align-items: start !important;
+}
+.card.row.v-end {
+  align-items: end !important;
+}
+.card.row.v-center {
+  align-items: center !important;
+}
+.card.row.h-start {
+  justify-content: start !important;
+}
+.card.row.h-end {
+  justify-content: end !important;
+}
+.card.row.h-center {
+  justify-content: center !important;
+}
+.card.distance {
+  padding: 16px;
+}
+.card.h-start {
+  align-items: start !important;
+}
+.card.h-end {
+  align-items: end !important;
+}
+.card.h-center {
+  align-items: center !important;
+}
+.card.v-start {
+  justify-content: start !important;
+}
+.card.v-end {
+  justify-content: end !important;
+}
+.card.v-center {
+  justify-content: center !important;
+}
+.card header {
+  width: 100%;
+  background: #ededed;
+  padding: 16px;
+  border-radius: 4px 4px 0 0;
+}
+.card main {
+  width: 100%;
+  background: #ededed;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 8px;
+}
+.card main p {
+  padding: 8px 16px 0 16px;
+}
+.card main img {
+  width: 100%;
+  object-fit: cover;
+}
+.card footer {
+  width: 100%;
+  background: #ededed;
+  padding: 8px 16px 16px 16px;
+  border-radius: 0 0 4px 4px;
+}
+.card.no-img p {
+  padding: 16px 16px 0 16px;
+}
+.card.divided header {
+  border-bottom: 1px solid #333;
+}
